# bglr

pkg/BGLR/: CHANGELOG  DESCRIPTION  NAMESPACE  TODO.txt  history.txt
pkg/BGLR.ff/: DESCRIPTION  NAMESPACE
pkg/BGLR.ff/R/: BGLR.R  methods.R
pkg/BGLR.ff/demo/: BL.R
pkg/BGLR.ff/man/: effects.BGLR.ff.Rd
pkg/BGLR.ff/src/: symbols.rds  util_plink.c  util_sample.c
pkg/BGLR/R/: BGLR.R  methods.R  util_plink.R
pkg/BGLR/data/: datalist  mouse.RData
pkg/BGLR/demo/: 00Index  BA.R  BB.R  BEN.R  BL.R  BRR.R  BRR_windows.R  BayesC.R  BayesCpi.R  Bernoulli.R  RKHS.R  read_bed.R  write_bed.R
pkg/BGLR/inst/: rkhs-function.Rd  rkhs.Rd
pkg/BGLR/inst/doc/: BGLR-manual.Rnw  BGLR-paper.Rnw  BGLR-tutorial.Rnw  BGLR.Rnw
pkg/BGLR/man/: BGLR.Rd  BLR.Rd  mouse.A.Rd  mouse.ID.Rd  mouse.Rd  mouse.X.Rd  mouse.cageID.Rd  mouse.pheno.Rd  mouse.y.Rd  read_bed.Rd  read_ped.Rd  write_bed.Rd
pkg/BGLR/src/: Makevars  util_plink.c  util_sample.c
pkg/BGLRutils/: DESCRIPTION  NAMESPACE
pkg/BGLRutils/R/: G_matrix.R  GtoD.R  addBinGenotypes.R  fitMixed.R  getGenos.R  readBinGenotypes.R  readLT1.R  recodeGenotypes.R  selected_eigenvalues.R  startup.R
pkg/BGLRutils/man/: D_matrix.Rd  G_matrix.Rd  GtoD.Rd  fitMixed.Rd  recodeGenotypes.Rd  selected_eigenvalues.Rd
pkg/BGLRutils/src/: Lanczos.c  Lanczos.h  Makevars  read_write_gbs.c
pkg/BLR/: MD5  NAMESPACE  history.txt
pkg/BLR/R/: BLRw_c.R
pkg/BLR/data/: wheat.RData
pkg/BLR/demo/: 00Index
pkg/BLR/man/: A.Rd  BLR.Rd  X.Rd  Y.Rd  sets.Rd
pkg/BLR/src/: sample_betas.c
pkg/bigPSD/: DESCRIPTION  NAMESPACE  configure  configure.ac  history.txt
pkg/bigPSD/R/: Kernel_utils.R  ParallelAgent.R  Rscalapack.R  StartUp.R  readLT1.R
pkg/bigPSD/demo/: read_sub_matrix.R
pkg/bigPSD/exec/: dfCRDriver.sh  pdgesv.R
pkg/bigPSD/man/: Rfactanal.Rd  RgridExit.Rd  RgridInfo.Rd  RgridInit.Rd  Rpdgemm.Rd  Rpdgeqrf.Rd  Rpdgesv.Rd  Rpdgesvd.Rd  Rpdpotrf.Rd  Rpdpotri.Rd  Rpdsyevd.Rd  Rpprcomp.Rd  Rprincomp.Rd  Rvarimax.Rd
pkg/bigPSD/src/: CRscalapack.c  CRscalapack.h  Kernel_utils.c  Makefile  Makefile.in  ParallelAgent.c  Plink_utils.c  callpdgetcp.f
pkg/bigPSD/src/scalapack-2.0.2/: Makefile  SLmake.inc
pkg/bigPSD/src/scalapack-2.0.2/SRC/: Makefile
www/: BGLR_1.0.tgz  BGLRutils_0.1.tgz  index.php
